--- a/dependencies/nodejs/package.json
+++ b/dependencies/nodejs/package.json
@@ -1,40 +1,20 @@
 {
-  "name": "KataServerless",
+  "name": "layer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "test": "jest --rootDir=../../ --config ../../jest.config.js --passWithNoTests --silent --noStackTrace",
-    "deploy": "serverless deploy -v",
-    "undeploy": "serverless remove"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.8",
-    "@babel/eslint-plugin": "^7.14.5",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
     "@babel/preset-env": "^7.15.8",
     "@types/aws-lambda": "^8.10.83",
-    "@types/jest": "^27.0.2",
     "@types/memory-cache": "^0.2.1",
     "@types/node": "^16.10.3",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "eslint": "^7.12.1",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.0.0",
-    "git-commit-msg-linter": "^3.2.8",
-    "husky": "^7.0.2",
-    "jest": "^27.2.5",
-    "jest-mock-extended": "^2.0.4",
-    "lint-staged": "^11.2.1",
-    "serverless-offline": "^8.2.0",
-    "serverless-openapi-documentation": "^0.4.0",
-    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
