--- a/serverless.doc.yml
+++ b/serverless.doc.yml
@@ -4,23 +4,41 @@ documentation:
   description: 'This is my API Kata Tata'
   models: {}
 
-endpoints:
-  GetFilm:
-    summary: "Get Film"
-    description: "Get film instance"
-    requestModels:
-      application/json: "PutDocumentRequest"
-    pathParams:
-      - name: "id"
-        description: "The id for a film to get"
-        schema:
-          type: "string"
-          pattern: "^[0-9]+$"
-  CreateFilm:
-    summary: "Crate Film"
-    description: "Create film instance"
-    requestModels:
-      application/json: "PutDocumentRequest"
-    requestBody:
-      title: "A user information object"
-      description: "A user information object"
+GetFilm:
+  summary: "Get Film"
+  description: "Get film instance"
+  requestModels:
+    application/json: "GetFilmRequest"
+  responseHeaders:
+    - name: "Content-Type"
+      description: "Content Type header"
+      schema:
+        type: "string"
+  requestHeaders:
+    - name: "Content-Type"
+      description: "Content Type header"
+      schema:
+        type: "string"
+  pathParams:
+    - name: "id"
+      description: "The id for a film to get"
+      schema:
+        type: "string"
+        pattern: "^[0-9]+$"
+
+CreateFilm:
+  summary: "Crate Film"
+  description: "Create film instance"
+  responseHeaders:
+    - name: "Content-Type"
+      description: "Content Type header"
+      schema:
+        type: "string"
+  requestHeaders:
+    - name: "Content-Type"
+      description: "Content Type header"
+      schema:
+        type: "string"
+  requestBody:
+    title: "A user information object"
+    description: "A user information object"
